--- a/src/components/MessageForm/MessageForm.module.css
+++ b/src/components/MessageForm/MessageForm.module.css
@@ -66,7 +66,8 @@
 @media (min-width: 320px) and (max-width: 767px) {
   .messageInputContainer {
     width: 260px;
-  }
+    justify-content: flex-end;
+  }  
 }
 .sendImg {
   width: 30px;
